--- a/Frontend/k_means/src/index.css
+++ b/Frontend/k_means/src/index.css
@@ -60,6 +60,19 @@ button:hover {
   margin: 20px;
 }
 
+.center-button {
+  display: block; /* Дозволяє контролювати вирівнювання */
+  margin: 20px auto; /* Вирівнює по центру горизонтально та додає відступ зверху і знизу */
+  padding: 10px 20px; /* Задає внутрішні відступи */
+  font-size: 16px; /* Розмір тексту */
+  color: white; /* Колір тексту */
+  border: none; /* Забирає рамку */
+  border-radius: 5px; /* Задає закруглені кути */
+  cursor: pointer; /* Вказує, що елемент клікабельний */
+  text-align: center; /* Центрує текст */
+  transition: background-color 0.3s; /* Плавний перехід кольору при наведенні */
+}
+
 .clustering-table {
   width: 100%;
   border-collapse: collapse;
